[gd_scene load_steps=30 format=3 uid="uid://t7pyu3eewfof"]

[ext_resource type="Script" uid="uid://baelh1pnfnsia" path="res://scripts/menu/profile/new_account.gd" id="1_2un37"]
[ext_resource type="Texture2D" uid="uid://c8i5tqduu04gf" path="res://assets/Images/backgrounds/main_menu_background.png" id="1_awuen"]
[ext_resource type="Texture2D" uid="uid://c58gn71wop3v1" path="res://assets/Images/buttons/home_icon.png" id="2_2un37"]
[ext_resource type="Texture2D" uid="uid://bakk34l2mpyq2" path="res://assets/Images/buttons/settings.png" id="3_wqooe"]
[ext_resource type="FontFile" uid="uid://mgk5xixvehjg" path="res://assets/Fonts/DynaPuff-VariableFont_wdth,wght.ttf" id="4_3thco"]
[ext_resource type="Texture2D" uid="uid://b6ju50y4qggod" path="res://assets/Images/buttons/main_menu_button.png" id="5_2un37"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_b6vvo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_screk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_v12us"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_41yx2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_68iav"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dag30"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_q0xri"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jx2o1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_y67gi"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qd2ij"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_q7qba"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wp7ho"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wqooe"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3thco"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6vwnh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xdhid"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gxql6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xwmp7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4d0kt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bgrwy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4bw3i"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_eptg0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_eeju0"]

[node name="NewAccount" type="Node2D"]
script = ExtResource("1_2un37")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(270, 480)
texture = ExtResource("1_awuen")

[node name="Home" type="Button" parent="."]
offset_left = 11.0
offset_top = 10.0
offset_right = 523.0
offset_bottom = 522.0
scale = Vector2(0.0799991, 0.0812476)
theme_override_styles/focus = SubResource("StyleBoxEmpty_b6vvo")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_screk")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_v12us")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_41yx2")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_68iav")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_dag30")
theme_override_styles/hover = SubResource("StyleBoxEmpty_q0xri")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_jx2o1")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_y67gi")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_qd2ij")
theme_override_styles/normal = SubResource("StyleBoxEmpty_q7qba")
icon = ExtResource("2_2un37")
flat = true
metadata/_edit_use_anchors_ = true

[node name="Settings" type="Button" parent="."]
offset_left = 480.0
offset_top = 5.0
offset_right = 536.0
offset_bottom = 61.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_wp7ho")
icon = ExtResource("3_wqooe")
flat = true
expand_icon = true
metadata/_edit_use_anchors_ = true

[node name="Title" type="Label" parent="."]
offset_left = 19.0
offset_top = 291.0
offset_right = 515.0
offset_bottom = 425.0
theme_override_fonts/font = ExtResource("4_3thco")
theme_override_font_sizes/font_size = 65
text = "Hızlı İsimlendir!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
metadata/_edit_use_anchors_ = true

[node name="Forms" type="VBoxContainer" parent="."]
offset_left = 39.0
offset_top = 473.0
offset_right = 279.0
offset_bottom = 634.0
theme_override_constants/separation = 40

[node name="UserName" type="HBoxContainer" parent="Forms"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 2

[node name="Label" type="Label" parent="Forms/UserName"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_3thco")
theme_override_font_sizes/font_size = 30
text = "Kullanıcı Adı"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextEdit" type="TextEdit" parent="Forms/UserName"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("4_3thco")
theme_override_font_sizes/font_size = 20

[node name="Name" type="HBoxContainer" parent="Forms"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 2

[node name="Label" type="Label" parent="Forms/Name"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_3thco")
theme_override_font_sizes/font_size = 30
text = "Adı"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextEdit" type="TextEdit" parent="Forms/Name"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("4_3thco")
theme_override_font_sizes/font_size = 20

[node name="Surname" type="HBoxContainer" parent="Forms"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 2

[node name="Label" type="Label" parent="Forms/Surname"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_3thco")
theme_override_font_sizes/font_size = 30
text = "Soy Adı"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextEdit" type="TextEdit" parent="Forms/Surname"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("4_3thco")
theme_override_font_sizes/font_size = 20

[node name="UserError" type="Label" parent="."]
visible = false
offset_left = 39.0
offset_top = 514.0
offset_right = 307.0
offset_bottom = 537.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_3thco")
theme_override_font_sizes/font_size = 18
text = "Bu kullanıcı adı kullanımdadır."
vertical_alignment = 1

[node name="Create" type="Button" parent="."]
offset_left = 110.0
offset_top = 731.0
offset_right = 394.0
offset_bottom = 810.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_wqooe")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_3thco")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_6vwnh")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_xdhid")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_gxql6")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_xwmp7")
theme_override_styles/hover = SubResource("StyleBoxEmpty_4d0kt")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_bgrwy")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_4bw3i")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_eptg0")
theme_override_styles/normal = SubResource("StyleBoxEmpty_eeju0")
icon = ExtResource("5_2un37")

[node name="Label" type="Label" parent="Create"]
layout_mode = 0
offset_left = 53.0
offset_top = 11.0
offset_right = 228.0
offset_bottom = 66.0
theme_override_colors/font_color = Color(0.00351917, 0.00351917, 0.00351917, 1)
theme_override_fonts/font = ExtResource("4_3thco")
theme_override_font_sizes/font_size = 40
text = "Oluştur"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Shadow" type="ColorRect" parent="."]
visible = false
offset_right = 540.0
offset_bottom = 960.0
color = Color(0, 0, 0, 0.501961)

[connection signal="pressed" from="Home" to="." method="_on_home_pressed"]
[connection signal="pressed" from="Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Create" to="." method="_on_create_pressed"]
